--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css">
     <!-- CSS -->
     <link rel="stylesheet" href="./src/CSS/style.css">
+    <link rel="stylesheet" href="./src/CSS/normalize.css">
     <!-- Tipografias -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -96,16 +97,20 @@
                                 <li>
                                     <!-- linkedin -->
                                     <a href="https://www.linkedin.com/in/daniela-heredia-t/" target="_blank">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="50" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
-                                            <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z" />
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="40" fill="currentColor"
+                                            class="bi bi-linkedin" viewBox="0 0 16 16">
+                                            <path
+                                                d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z" />
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <!-- gitHub -->
                                     <a href="https://github.com/DanHT22" target="_blank">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="50" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
-                                            <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="40" fill="currentColor"
+                                            class="bi bi-github" viewBox="0 0 16 16">
+                                            <path
+                                                d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
                                         </svg>
                                     </a>
                                 </li>
@@ -131,23 +136,22 @@
                     <div class="setion-title text-center container" data-aos="fade-up" data-aos-delay="100">
                         <h1>Sobre mi</h1>
                         <p class="miDescripcion">
-                            Soy una desarrolladora web apasionada por crear aplicaciones implementando tecnologías como HTML5, CSS, Bootstrap y Javascript. Utilizo un enfoque centrado en el usuario para crear una interfaz intuitivas y atractivas que mejoren la experiencia de los usuarios (UX/UI). Cuento conconocimientos básicos en MySQL, Java y R. Utilizo mis habilidades de liderazgo, planificación, comunicación y trabajo en equipo para resolver problemas y garantizar el éxito de los proyectos. 
+                            Soy una desarrolladora web apasionada por crear aplicaciones implementando tecnologías como
+                            HTML5, CSS, Bootstrap y Javascript. Utilizo un enfoque centrado en el usuario para crear una
+                            interfaz intuitivas y atractivas que mejoren la experiencia de los usuarios (UX/UI). Cuento
+                            conconocimientos básicos en MySQL, Java y R. Utilizo mis habilidades de liderazgo,
+                            planificación, comunicación y trabajo en equipo para resolver problemas y garantizar el
+                            éxito de los proyectos.
                         </p>
                         <div class="line"></div>
                     </div>
                 </div>
             </div>
             <div id="habilidades">
+           
                 <div class="row gy-4 text-center">
-                    <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-delay="100">
-                        <div class="service py-5 px-4 ">
-                            <div class="service-icon">
-                                <img src="./src/icons/figma-2.png" alt="">
-                            </div>
-                            <h5 class="mt-4"></h5>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-delay="200">
+                    <h4>Tecnologías:</h4>
+                    <div class="col-lg-2 col-sm-6" data-aos="fade-up" data-aos-delay="200">
                         <div class="service py-5 px-4">
                             <div class="service-icon">
                                 <img src="./src/icons/html.png" alt="">
@@ -155,23 +159,53 @@
                             <h5 class="mt-4"></h5>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-delay="300">
+                    <div class="col-lg-2 col-sm-6" data-aos="fade-up" data-aos-delay="300">
                         <div class="service py-5 px-4">
                             <div class="service-icon">
                                 <img src="./src/icons/css.png" alt="">
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-delay="400">
+                    <div class="col-lg-2 col-sm-6" data-aos="fade-up" data-aos-delay="300">
+                        <div class="service py-5 px-4">
+                            <div class="service-icon">
+                                <img src="./src/icons/bootstrap.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-2 col-sm-6" data-aos="fade-up" data-aos-delay="400">
                         <div class="service py-5 px-4">
                             <div class="service-icon">
                                 <img src="./src/icons/js-2.png" alt="">
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-2 col-sm-6" data-aos="fade-up" data-aos-delay="300">
+                        <div class="service py-5 px-4">
+                            <div class="service-icon">
+                                <img src="./src/icons/java-3.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-2 col-sm-6" data-aos="fade-up" data-aos-delay="400">
+                        <div class="service py-5 px-4">
+                            <div class="service-icon">
+                                <img src="./src/icons/r.png" alt="">
+                            </div>
+                        </div>
+                    </div>
                 </div>
+                <h4 class="text-center">Herramientas:</h4>
                 <div class="row gy-4 text-center">
-                    <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-delay="100">
+                    <div class="col-lg-2 col-sm-6" data-aos="fade-up" data-aos-delay="100">
+                        <div class="service py-5 px-4 ">
+                            <div class="service-icon">
+                                <img src="./src/icons/figma-2.png" alt="">
+                            </div>
+                            <h5 class="mt-4"></h5>
+                        </div>
+                    </div>
+                    <div class="col-lg-2 col-sm-6" data-aos="fade-up" data-aos-delay="100">
                         <div class="service py-5 px-4 ">
                             <div class="service-icon">
                                 <img src="./src/icons/git-2.png" alt="">
@@ -179,26 +213,36 @@
                             <h5 class="mt-4"></h5>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-delay="200">
-                        <div class="service py-5 px-4">
+                    <div class="col-lg-2 col-sm-6" data-aos="fade-up" data-aos-delay="100">
+                        <div class="service py-5 px-4 ">
                             <div class="service-icon">
-                                <img src="./src/icons/mysql.png" alt="">
+                                <img src="./src/icons/visualStudio.png" alt="">
                             </div>
                             <h5 class="mt-4"></h5>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-delay="300">
-                        <div class="service py-5 px-4">
+                    <div class="col-lg-2 col-sm-6" data-aos="fade-up" data-aos-delay="100">
+                        <div class="service py-5 px-4 ">
                             <div class="service-icon">
-                                <img src="./src/icons/java-3.png" alt="">
+                                <img src="./src/icons/trello.png" alt="">
                             </div>
+                            <h5 class="mt-4"></h5>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-delay="400">
+                    <div class="col-lg-2 col-sm-6" data-aos="fade-up" data-aos-delay="200">
                         <div class="service py-5 px-4">
                             <div class="service-icon">
-                                <img src="./src/icons/r.png" alt="">
+                                <img src="./src/icons/Mysql2.png" alt="">
                             </div>
+                            <h5 class="mt-4"></h5>
+                        </div>
+                    </div>
+                    <div class="col-lg-2 col-sm-6" data-aos="fade-up" data-aos-delay="200">
+                        <div class="service py-5 px-4">
+                            <div class="service-icon">
+                                <img src="./src/icons/eclipse2.png" alt="">
+                            </div>
+                            <h5 class="mt-4"></h5>
                         </div>
                     </div>
                 </div>
@@ -336,14 +380,18 @@
         <div class="text-center">
             <!-- linkedin -->
             <a href="https://www.linkedin.com/in/daniela-heredia-t/" target="_blank">
-                <svg xmlns="http://www.w3.org/2000/svg" width="50" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
-                    <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z" />
+                <svg xmlns="http://www.w3.org/2000/svg" width="40" fill="currentColor" class="bi bi-linkedin"
+                    viewBox="0 0 16 16">
+                    <path
+                        d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z" />
                 </svg>
             </a>
             <!-- gitHub -->
             <a href="https://github.com/DanHT22" target="_blank">
-                <svg xmlns="http://www.w3.org/2000/svg" width="50" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
-                    <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
+                <svg xmlns="http://www.w3.org/2000/svg" width="40" fill="currentColor" class="bi bi-github"
+                    viewBox="0 0 16 16">
+                    <path
+                        d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
                 </svg>
             </a>
             <div class="footer-bottom">
